change new Double(), new Integer() and new Float() to .valueOf()